// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Lens] formula getErrorMessage returns an error if the field is missing 1`] = `
Array [
  Object {
    "displayLocations": Array [
      Object {
        "id": "toolbar",
      },
      Object {
        "dimensionId": "col1",
        "id": "dimensionButton",
      },
      Object {
        "id": "embeddableBadge",
      },
    ],
    "message": <Memo(MemoizedFormattedMessage)
      defaultMessage="{count, plural, one {Field} other {Fields}} {missingFields} {count, plural, one {was} other {were}} not found."
      id="xpack.lens.indexPattern.fieldsNotFound"
      values={
        Object {
          "count": 1,
          "missingFields": <React.Fragment>
            <React.Fragment>
              <strong>
                noField
              </strong>
              
            </React.Fragment>
          </React.Fragment>,
        }
      }
    />,
  },
]
`;

exports[`[Lens] formula getErrorMessage returns an error if the field is missing 2`] = `
Array [
  Object {
    "displayLocations": Array [
      Object {
        "id": "toolbar",
      },
      Object {
        "dimensionId": "col1",
        "id": "dimensionButton",
      },
      Object {
        "id": "embeddableBadge",
      },
    ],
    "message": <Memo(MemoizedFormattedMessage)
      defaultMessage="{count, plural, one {Field} other {Fields}} {missingFields} {count, plural, one {was} other {were}} not found."
      id="xpack.lens.indexPattern.fieldsNotFound"
      values={
        Object {
          "count": 1,
          "missingFields": <React.Fragment>
            <React.Fragment>
              <strong>
                noField
              </strong>
              
            </React.Fragment>
          </React.Fragment>,
        }
      }
    />,
  },
]
`;

exports[`[Lens] formula getErrorMessage returns an error if the field is missing 3`] = `
Array [
  Object {
    "displayLocations": Array [
      Object {
        "id": "toolbar",
      },
      Object {
        "dimensionId": "col1",
        "id": "dimensionButton",
      },
      Object {
        "id": "embeddableBadge",
      },
    ],
    "message": <Memo(MemoizedFormattedMessage)
      defaultMessage="{count, plural, one {Field} other {Fields}} {missingFields} {count, plural, one {was} other {were}} not found."
      id="xpack.lens.indexPattern.fieldsNotFound"
      values={
        Object {
          "count": 1,
          "missingFields": <React.Fragment>
            <React.Fragment>
              <strong>
                noField
              </strong>
              
            </React.Fragment>
          </React.Fragment>,
        }
      }
    />,
  },
]
`;

exports[`[Lens] formula getErrorMessage returns an error if the field is missing 4`] = `
Array [
  Object {
    "displayLocations": Array [
      Object {
        "id": "toolbar",
      },
      Object {
        "dimensionId": "col1",
        "id": "dimensionButton",
      },
      Object {
        "id": "embeddableBadge",
      },
    ],
    "message": <Memo(MemoizedFormattedMessage)
      defaultMessage="{count, plural, one {Field} other {Fields}} {missingFields} {count, plural, one {was} other {were}} not found."
      id="xpack.lens.indexPattern.fieldsNotFound"
      values={
        Object {
          "count": 1,
          "missingFields": <React.Fragment>
            <React.Fragment>
              <strong>
                noField
              </strong>
              
            </React.Fragment>
          </React.Fragment>,
        }
      }
    />,
  },
]
`;

exports[`[Lens] formula getErrorMessage returns an error with plural form correctly handled 1`] = `
Array [
  Object {
    "displayLocations": Array [
      Object {
        "id": "toolbar",
      },
      Object {
        "dimensionId": "col1",
        "id": "dimensionButton",
      },
      Object {
        "id": "embeddableBadge",
      },
    ],
    "message": <Memo(MemoizedFormattedMessage)
      defaultMessage="{count, plural, one {Field} other {Fields}} {missingFields} {count, plural, one {was} other {were}} not found."
      id="xpack.lens.indexPattern.fieldsNotFound"
      values={
        Object {
          "count": 2,
          "missingFields": <React.Fragment>
            <React.Fragment>
              <strong>
                noField
              </strong>
              , 
            </React.Fragment>
            <React.Fragment>
              <strong>
                noField2
              </strong>
              
            </React.Fragment>
          </React.Fragment>,
        }
      }
    />,
  },
]
`;

exports[`[Lens] formula getErrorMessage returns an error with plural form correctly handled 2`] = `
Array [
  Object {
    "displayLocations": Array [
      Object {
        "id": "toolbar",
      },
      Object {
        "dimensionId": "col1",
        "id": "dimensionButton",
      },
      Object {
        "id": "embeddableBadge",
      },
    ],
    "message": <Memo(MemoizedFormattedMessage)
      defaultMessage="{count, plural, one {Field} other {Fields}} {missingFields} {count, plural, one {was} other {were}} not found."
      id="xpack.lens.indexPattern.fieldsNotFound"
      values={
        Object {
          "count": 2,
          "missingFields": <React.Fragment>
            <React.Fragment>
              <strong>
                noField
              </strong>
              , 
            </React.Fragment>
            <React.Fragment>
              <strong>
                noField2
              </strong>
              
            </React.Fragment>
          </React.Fragment>,
        }
      }
    />,
  },
]
`;
